// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect/> tests should work when no matching results found: Filtered Menu 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-3"
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="main bp4-popover2-target bp4-popover2-open"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value="junk"
        />
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-inline"
  >
    <div
      class="bp4-popover2-transition-container bp4-overlay-content bp4-popover2-appear bp4-popover2-appear-active"
      style="position: absolute; left: 0px; top: 0px; width: 0px;"
    >
      <div
        class="bp4-popover2 bp4-minimal bp4-popover2-match-target-width bp4-popover2-placement-bottom bp4-multi-select-popover popover"
        style="transform-origin: center top;"
      >
        <div
          class="bp4-popover2-content"
        >
          <div>
            <ul
              aria-label="selectable options"
              aria-multiselectable="true"
              class="bp4-menu"
              id="listbox-3"
              role="listbox"
            >
              <li
                class="menuItem disabled"
              >
                No matching results found
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-1"
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="main bp4-popover2-target"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data: Final state 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-1"
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="main bp4-popover2-target"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data: Loading state 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-1"
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="main bp4-popover2-target"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with filtering: Filtered Menu 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-2"
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="main bp4-popover2-target bp4-popover2-open"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value="cha"
        />
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-inline"
  >
    <div
      class="bp4-popover2-transition-container bp4-overlay-content bp4-popover2-appear bp4-popover2-appear-active"
      style="position: absolute; left: 0px; top: 0px; width: 0px;"
    >
      <div
        class="bp4-popover2 bp4-minimal bp4-popover2-match-target-width bp4-popover2-placement-bottom bp4-multi-select-popover popover"
        style="transform-origin: center top;"
      >
        <div
          class="bp4-popover2-content"
        >
          <div>
            <ul
              aria-label="selectable options"
              aria-multiselectable="true"
              class="bp4-menu"
              id="listbox-2"
              role="listbox"
            >
              <li
                class="menuItem active"
              >
                <input
                  class="checkbox"
                  readonly=""
                  type="checkbox"
                  value="004"
                />
                <p
                  class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                  style="--text-line-clamp: 1;"
                >
                  Charmander
                </p>
              </li>
              <li
                class="menuItem"
              >
                <input
                  class="checkbox"
                  readonly=""
                  type="checkbox"
                  value="005"
                />
                <p
                  class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                  style="--text-line-clamp: 1;"
                >
                  Charmeleon
                </p>
              </li>
              <li
                class="menuItem"
              >
                <input
                  class="checkbox"
                  readonly=""
                  type="checkbox"
                  value="006"
                />
                <p
                  class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                  style="--text-line-clamp: 1;"
                >
                  Charizard
                </p>
              </li>
              <button
                aria-label="cha"
                class="bp4-button bp4-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp4-button-text"
                >
                  cha
                </span>
              </button>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with static data 1`] = `
<div>
  <div
    aria-autocomplete="list"
    aria-controls="listbox-0"
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="main bp4-popover2-target"
    role="combobox"
  >
    <div
      class="bp4-input bp4-tag-input bp4-multi-select"
    >
      <div
        class="bp4-tag-input-values"
      >
        <input
          class="bp4-input-ghost bp4-multi-select-tag-input-input"
          placeholder="- Select -"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
